# xopera-tosca-parser

./: README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci_cd.yaml
src/opera_tosca_parser/: cli.py  utils.py  value.py
src/opera_tosca_parser/commands/: parse.py
src/opera_tosca_parser/parser/tosca/: __init__.py  list.py  reference.py  void.py
src/opera_tosca_parser/parser/tosca/v_1_3/: artifact_definition.py  attribute_definition.py  collector_mixin.py  csar.py  definition_collector_mixin.py  import_definition.py  node_template.py  operation_definition_for_template.py  operation_host.py  parameter_definition.py  policy_definition.py  property_definition.py  relationship_template.py  service_template.py  topology_template.py  void.py
src/opera_tosca_parser/parser/tosca/v_1_3/definitions/: artifact_definition.py  collector_mixin.py  service_template.py
src/opera_tosca_parser/template/: capability.py  interface.py  node.py  operation.py  policy.py  relationship.py  requirement.py  topology.py  trigger.py
tests/integration/cli_commands/: inputs.json  runme.sh
tests/integration/misc_tosca_types/: inputs.yaml  runme.sh
tests/integration/small_tosca_2_0/: inputs.yaml  runme.sh  service.yaml
tests/unit/: requirements.txt
tests/unit/opera_tosca_parser/: conftest.py
tests/unit/opera_tosca_parser/parser/: test_tosca.py  test_tosca_2_0.py
tests/unit/opera_tosca_parser/parser/tosca/: test_base.py  test_bool.py  test_comparable.py  test_entity.py  test_integer.py  test_list.py  test_map.py  test_path.py  test_reference.py  test_string.py  test_timestamp.py  test_type.py  test_version.py
tests/unit/opera_tosca_parser/parser/tosca/v_1_3/: test_activity_definition.py  test_artifact_definition.py  test_artifact_type.py  test_attribute_definition.py  test_base.py  test_bool.py  test_capability_assignment.py  test_capability_definition.py  test_capability_type.py  test_comparable.py  test_condition_clause_definition.py  test_credential.py  (+45 more)
tests/unit/opera_tosca_parser/parser/utils/: test_location.py
tests/unit/opera_tosca_parser/parser/yaml/: test_constructor.py  test_loader.py  test_node.py  test_resolver.py
(+101 files in other folders)
