[metadata]
name = opera-tosca-parser
url = https://github.com/xlab-si/xopera-tosca-parser
project_urls =
    Documentation = https://xlab-si.github.io/xopera-docs/
    Source Code = https://github.com/xlab-si/xopera-tosca-parser
    Bug Tracker = https://github.com/xlab-si/xopera-tosca-parser/issues
    Discussions = https://github.com/xlab-si/xopera-tosca-parser/discussions
    Releases = https://github.com/xlab-si/xopera-tosca-parser/releases
    Pre-releases = https://test.pypi.org/project/opera-tosca-parser/#history
    Examples = https://github.com/xlab-si/xopera-examples
    CI = https://github.com/xlab-si/xopera-tosca-parser/actions/
author = XLAB d.o.o.
author_email = pypi@xlab.si
maintainer = xOpera team
maintainer_email = xopera@xlab.si
license_file = LICENSE
description = xOpera TOSCA parser
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orchestration
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
zip_safe = True
include_package_data = True
setup_requires =
    setuptools_scm >= 6.4.2
install_requires =
    pyyaml <= 5.4.1
    shtab >= 1.5.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    opera-tosca-parser = opera_tosca_parser.cli:main

[options.extras_require]
test =
    wheel == 0.37.1
    pytest == 7.1.3
